[tool.poetry]
name = "web"
version = "0.1.0"
description = "Программа, которая помогает бизнесу не терять заявки, хранить историю работы с клиентами и упрощает процесс продаж."
authors = ["Ruslan Sayfullin <ruslansaifullin91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.4"
django-debug-toolbar = "^3.8.1"
psycopg2-binary = "^2.9.5"
requests = "^2.28.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
